# PlayFrame

./: .gitignore  README.md  cmake.sh  deploy.sh
run/connsvr/conf/: config.lua
run/datasvr/conf/: config.lua
run/gamesvr/conf/: config.lua
run/tools/: check.sh  log_delete.sh  restart_all.sh  rsync.txt  start_all.sh  stop_all.sh  zfz.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/dep/: README.txt
src/common/dep/glog/include/: logging.h
src/common/dep/mysql/include/: my_config.h  mysql_version.h
src/common/frame/: .gitignore  CMakeLists.txt  app_base.h  callback.h  comm_def.h  epoller.cpp  epoller.h  heap_timer.cpp  heap_timer.h  lua_config.cpp  lua_config.h  lua_engine.cpp  lua_engine.h  lua_tinker.cpp  lua_tinker.h  msg_module_base.h  mysql_mgr.cpp  mysql_mgr.h  random.cpp  random.h  server_frame.cpp  server_frame.h  shm_memory.cpp  shm_memory.h  shm_pool.h  time_value.cpp  time_value.h  timer_heap.cpp  timer_heap.h  utils.cpp  utils.h
src/common/protocol/: CMakeLists.txt
src/common/protocol/cpp/: .cs_notify.pb.h.swp  .gitignore  CMakeLists.txt  cs_msg.pb.cc  cs_msg.pb.h  cs_notify.pb.cc  cs_notify.pb.h  cs_reg.pb.cc  cs_reg.pb.h  cs_role.pb.cc  cs_role.pb.h  database.pb.cc  database.pb.h  ss_data.pb.cc  ss_data.pb.h  ss_msg.pb.cc  ss_msg.pb.h
src/common/protocol/proto/: CMakeLists.txt
src/common/protocol/proto/cs_proto/: cs_msg.proto  cs_notify.proto  cs_reg.proto  cs_role.proto
src/common/protocol/proto/database/: database.proto
src/common/protocol/proto/ss_proto/: ss_data.proto  ss_msg.proto
src/common/protocol/sql/: create_sg_data_table.sql  create_sg_db.sql
src/connsvr/: CMakeLists.txt  app.cpp  app.h  app_def.h
src/connsvr/config_module/: config_module.cpp  config_module.h
src/connsvr/conn_mgr_module/: conn_mgr_module.cpp  conn_mgr_module.h  connection.cpp  connection.h
src/connsvr/event_module/: event_module.cpp  event_module.h
src/datasvr/: CMakeLists.txt  app.cpp  app.h  app_def.h
src/datasvr/config_module/: config_module.cpp  config_module.h
src/datasvr/msg_module/: msg_module.cpp  msg_module.h
src/datasvr/mysql_module/: mysql_module.cpp  mysql_module.h
src/gamesvr/: CMakeLists.txt  app.cpp  app.h  app_def.h
src/gamesvr/config_module/: config_module.cpp  config_module.h
src/gamesvr/lua_engine_module/: lua_engine_module.cpp  lua_engine_module.h
src/gamesvr/lua_engine_module/script/: CMakeLists.txt  main.lua  res_building.lua  res_city.lua  res_lord.lua  sync_to_run.sh  task_reg.lua  task_role.lua
src/gamesvr/msg_module/: msg_module.cpp  msg_module.h
src/gamesvr/obj_mgr_module/: obj_mgr_module.cpp  obj_mgr_module.h
src/gamesvr/obj_mgr_module/object/: city.cpp  city.h  player.cpp  player.h
src/gamesvr/timer_mgr_module/: timer_mgr_module.cpp  timer_mgr_module.h
src/tcpclient/: CMakeLists.txt  conn_cache.cpp  conn_cache.h  msg_mgr.cpp  msg_mgr.h  msg_wrapper.h  net_mgr.cpp  net_mgr.h  tcpclient.cpp
