MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR" ${CMAKE_CURRENT_SOURCE_DIR})
#设置编译好程序存放路径
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/config_module
    ${CMAKE_CURRENT_SOURCE_DIR}/conn_mgr_module
    ${CMAKE_CURRENT_SOURCE_DIR}/event_module
)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../run/connsvr/bin)
AUX_SOURCE_DIRECTORY(. SRC)
AUX_SOURCE_DIRECTORY(./config_module SRC)
AUX_SOURCE_DIRECTORY(./conn_mgr_module SRC)
AUX_SOURCE_DIRECTORY(./event_module SRC)
ADD_EXECUTABLE(connsvr ${SRC})
TARGET_LINK_LIBRARIES(connsvr ${STATIC_LIBS} ${DYN_LIBS})

