MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR" ${CMAKE_CURRENT_SOURCE_DIR})
#设置编译好程序存放路径
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/config_module
    ${CMAKE_CURRENT_SOURCE_DIR}/msg_module
    ${CMAKE_CURRENT_SOURCE_DIR}/mysql_module
)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../run/datasvr/bin)
AUX_SOURCE_DIRECTORY(. SRC)
AUX_SOURCE_DIRECTORY(./config_module SRC)
AUX_SOURCE_DIRECTORY(./msg_module SRC)
AUX_SOURCE_DIRECTORY(./mysql_module SRC)
ADD_EXECUTABLE(datasvr ${SRC})
TARGET_LINK_LIBRARIES(datasvr ${STATIC_LIBS} ${DYN_LIBS})

